objects/Case_Closed_PE__e.object
<CustomObject>
    <fields>
        <fullName>Case_Id__c</fullName>
        <label>Case Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_Action__c</fullName>
        <label>DML Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <label>Date Time Opened</label>
        <type>DateTime</type>
    </fields>
    <label>Case Closed PE</label>
    <pluralLabel>Case Closed PEs</pluralLabel>
</CustomObject>